iptables.rules
# Generated by iptables-save v1.6.0 on Tue Nov 20 11:19:09 2018
*filter
:INPUT DROP [39:2048]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [35261:3155377]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 77.73.158.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 169.63.86.160/28 -j ACCEPT
-A INPUT -s 174.37.245.32/29 -j ACCEPT
-A INPUT -s 174.36.197.192/28 -j ACCEPT
-A INPUT -s 173.193.199.16/28 -j ACCEPT
-A INPUT -s 119.81.44.0/28 -j ACCEPT
COMMIT
# Completed on Tue Nov 20 11:19:09 2018
